# glib-objc

./: .gitignore  Makefile.am  TODO  autogen.sh  configure.ac.in  module.xml
common/: Makefile.am  goc-private.h
glib-objc/: GOCAutoreleasePool.h  GOCAutoreleasePool.m  GOCComparable.h  GOCConstantString.h  GOCHashTable.h  GOCHashTable.m  GOCHashable.h  GOCIterable.h  GOCList.h  GOCList.m  GOCMain.h  GOCMain.m  GOCObjectBase.h  GOCObjectBase.m  GOCString.h  GOCString.m  GOCVariant.h  GOCVariant.m  Makefile.am  glib-objc-2.0.pc.in  glib-objc.h
gobject/: GLIBBoxedValue.m  GLIBObject.h  GLIBObject.m  GLIBParamSpec.h  GLIBSignalProxy.m  GLIBValue.h  GLIBValue.m  Makefile.am  glib-objc-private.h  glib-objc.h  gobject-objc-2.0.pc.in  ns-object-boxed.h
gobject-objc/: GLIBBoxedValue.h  GLIBObject.h  GLIBObject.m  GLIBValue.h  GOCBoxedValue.h  GOCBoxedValue.m  GOCClosure.h  GOCClosure.m  GOCNumber+GOCPrivate.h  GOCNumber.h  GOCNumber.m  GOCObject.h  GOCObject.m  GOCParamSpec.h  GOCValue+GOCPrivate.h  GOCValue.h  GOCValue.m  Makefile.am  glib-objc-private.h  glib-objc-private.m  glib-objc.h  gobject-objc-2.0.pc.in  gobject-objc-private.h  gobject-objc-private.m  gobject-objc.h  ns-object-boxed.h  ns-object-boxed.m
tests/: Makefile.am  t-signal.m
